--- a/assets/stylesheets/production-styleheet.css
+++ b/assets/stylesheets/production-styleheet.css
@@ -110,6 +110,9 @@ body {
 .pt-0{
   padding-top: 0 !important;
 }
+.line-height-0{
+  line-height: 0;
+} 
 /* - // _CLOSE >> GLOBAL PAGE SETTINGS << SHB // - */
 
 /* - // _START >> GLOBAL PSEUDO STYLES << SHB // - */
@@ -664,7 +667,7 @@ a[disabled]:active {
 
 /* - // _START >> GENERAL BUTTON STYLES << SHB // - */
 .btn-primary {
-  padding: 20px 34px;
+  padding: 15px 24px;
   border-radius: 40px;
   font-size: var(--body-font-size);
   font-weight: var(--body-font-weight);
@@ -698,7 +701,7 @@ a[disabled]:active {
 }
 
 .btn-length-200 {
-  min-width: 200px;
+  min-width: 160px;
 }
 
 /* - // _CLOSE >> GENERAL BUTTON STYLES << SHB // - */
@@ -711,7 +714,7 @@ a[disabled]:active {
   right: 0;
   width: 100%;
   z-index: 999;
-  padding: 30px 0;
+  padding: 20px 0;
   background-color: transparent;
   transition: all .35s ease-in-out;
   display: flex;
