--- a/assets/stylesheets/production-styleheet.css
+++ b/assets/stylesheets/production-styleheet.css
@@ -202,7 +202,9 @@ input::-webkit-credentials-auto-fill-button {
 input {
   -webkit-appearance: none;
 }
-
+.position-relative{
+  position: relative;
+}
 /* - // _CLOSE >> GLOBAL PSEUDO STYLES << SHB // - */
 
 /* - // _START >> GLOBAL FONTS & TEXT STYLES << SHB // - */
@@ -363,7 +365,9 @@ p,
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+.text-center{
+  text-align: center;
+}
 /* - // _CLOSE >> GLOBAL FONTS & TEXT STYLES << SHB // - */
 
 /* - // _START >> PRODUCTION UTILITIES STYLES << SHB // - */
@@ -1316,7 +1320,7 @@ footer.shb-footer {
 }
 
 .shb-section-digital-solution-card:hover {
-  border: 2px solid #dbdbdb;
+  border: 2px solid var(--select-back-color);
   box-shadow: 0 20px 20px rgb(219 219 219 / 20%);
 }
 
@@ -1466,7 +1470,7 @@ footer.shb-footer {
 }
 
 .shb-section-feedback-card:hover {
-  border-color: var(--link-color);
+  border-color: var(--select-back-color);
 }
 
 .shb-section-feedback-title {
@@ -1760,7 +1764,9 @@ footer.shb-footer {
   background-size: 100%;
   top: 10%;
 }
-
+.shb-section-developing-process-step-button h4{
+  margin-top: 110px;
+}
 .shb-section-developing-process-step-ground {
   background: var(--color-gradient-01-opac-15);
   border-radius: 50rem;
@@ -1811,6 +1817,7 @@ footer.shb-footer {
   border-radius: 0 40px 40px 0;
   background-color: var(--color-white);
   filter: drop-shadow(0px 90px 120px rgba(5, 5, 5, 0.1));
+  border: 2px solid var(--select-back-color);
 }
 
 .shb-section-developing-process-visuals-description::before {
@@ -1897,7 +1904,7 @@ footer.shb-footer {
 }
 
 .shb-section-technology-tab:hover .shb-section-technology-tab-title {
-  color: var(--link-color);
+  color: var(--select-back-color);
 }
 
 .shb-section-technology-tab.active .shb-section-technology-tab-title {
@@ -1905,7 +1912,7 @@ footer.shb-footer {
 }
 
 .shb-section-technology-tab:hover svg path {
-  fill: var(--link-color);
+  fill: var(--select-back-color);
 }
 
 .shb-section-technology-tab.active svg path {
@@ -2112,18 +2119,20 @@ footer.shb-footer {
   transition: all 0.3s;
 }
 
-.shb-tabs-grids .shb-tabs-group .shb-section-success-tab-content:hover .shb-section-success-tab-icon {
+.shb-tabs-grids .shb-tabs-group .shb-section-success-tab-content:hover .shb-section-success-tab-icon,
+.shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-icon {
   border-color: var(--link-color);
   background-color: var(--color-black);
 }
 
-.shb-tabs-grids .shb-tabs-group .shb-section-success-tab-content:hover .shb-section-success-tab-icon path {
+.shb-tabs-grids .shb-tabs-group .shb-section-success-tab-content:hover .shb-section-success-tab-icon path,
+.shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-icon path {
   fill: var(--color-white);
 }
 
-.shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-content {
+/* .shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-content {
   background: transparent;
-}
+} */
 
 .shb-section-success-tab-icon {
   width: var(--shb-success-tab-icon);
@@ -2136,11 +2145,11 @@ footer.shb-footer {
   transition: all .4s;
 }
 
-.shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-icon {
+/* .shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-icon {
   background-color: transparent;
   border-color: var(--color-white);
   color: var(--color-white);
-}
+} */
 
 .shb-section-success-tab-icon i {
   height: calc(var(--shb-success-tab-icon) / 2);
@@ -2155,13 +2164,12 @@ footer.shb-footer {
   letter-spacing: 0.01em;
 }
 
-.shb-tabs-grids .shb-tabs-group .active .text-gradient-theme,
+/* .shb-tabs-grids .shb-tabs-group .active .text-gradient-theme,
 .shb-tabs-grids .shb-tabs-group .active .shb-section-success-tab-title {
   background: unset;
   color: var(--color-white);
   -webkit-text-fill-color: unset;
-}
-
+} */
 .shb-section-success-reason-content-header {
   max-width: 560px;
   margin: 0 0 0 auto;
@@ -2317,7 +2325,9 @@ footer.shb-footer {
   border-radius: 20px;
   padding: 20px;
 }
-
+.form-wrap .shb-section-contact-form-column:last-child {
+  margin-bottom: 20px;
+}
 .shb-section-contact-form-form-control input:hover,
 .shb-section-contact-form-form-control textarea:hover {
   border: 1px solid transparent;
@@ -2377,11 +2387,12 @@ footer.shb-footer {
 .shb-expandable-card-item {
   width: 100px;
   height: 520px;
+  overflow: hidden;
   transition: all .5s;
 }
 
 .shb-expandable-card-item:hover {
-  width: 175px;
+  width: 275px;
   transition: all .4s;
 }
 
@@ -2389,7 +2400,150 @@ footer.shb-footer {
   width: 100%;
   height: 100%;
 }
-
+.shb-project-title-wrap{
+  width: 100%;
+  min-height: 50px;
+  background-color: rgba(0,0,0,0.5);
+  position: absolute;
+  bottom: -50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all .4s;
+}
+.shb-expandable-card-image h4 {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--color-white);
+  text-align: center;
+  letter-spacing: 1px;
+}
+.shb-expandable-card-item:hover .shb-project-title-wrap{
+  bottom: 0;
+}
 /* -!! // _CLOSE >> PAGE: PORTFOLIO SIMPLE SLIDER STYLES << SHB // !!- */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 999; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  max-width: 1000px;
+  width: 100%;
+  padding: 50px 0;
+  /* min-height: 700px; */
+  border-radius: 30px 0;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  position: relative;
+  /* overflow: hidden; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-content::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 516px;
+  height: 100%;
+  background-image: url(./../images/background-covers/login-vactor.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  left: -50px;
+}
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+.form-wrap{
+  margin-left: 450px;
+  width: 450px;
+  /* min-height: 500px; */
+  position: relative;
+  z-index: 1;
+  border-radius: 40px;
+  background: var(--color-gradient-01);
+  padding: 3px;
+}
+.form-wrap .shb-section-contact-form {
+  margin-top: 25px;
+}
+.form-wrap > div{
+  background-color: var(--color-white);
+  border-radius: inherit;
+  padding: 40px;
+}
+.form-data-wrap{
+  width: 100%;
+  max-height: 450px;
+  overflow-y: auto;
+  padding-right: 5px;
+}
+.auth-tcup{
+  max-width: 250px;
+  position: absolute;
+  left: 30px;
+  z-index: 1;
+  bottom: 0;
+}
+/* The Close Button */
+.modal .close {
+  color: var(--color-white);
+  font-size: 38px;
+  font-weight: 400;
+  width: 35px;
+  height: 35px;
+  background: var(--select-back-color);
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+  position: absolute;
+  right: -17.5px;
+  top: -17.5px;
+}
+.modal .close:hover,
+.modal .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal .modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+.modal .modal-body {padding: 2px 16px;}
+.modal .modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
 /* - // _CLOSE >> PRODUCTION BODY STYLES << SHB // - */
